--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "cviebrock/eloquent-sluggable": "^8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
+        "fx3costa/laravelchartjs": "^2.8",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.0",
         "laravel/framework": "^8.12",
